backup_before_fair_regeneration_20260403_144618/output/starcoder2/cloudformation_009.yaml
# Generated by ollama (starcoder2)
# Prompt: Create a CloudFormation template for our complete application stack (VPC, EC2, RDS, S3, Load Balancer). Focus on core infrastructure components. We'll add CloudWatch alarms and detailed monitoring after we deploy and verify the basic setup works.
# Category: cloud_monitoring

AWSTemplateFormatVersion: 2010-09-09
Description: A sample VPC, EC2, RDS, S3, Load Balancer stack.
Parameters:
  InstanceType:
    Description: 'The type of instance to deploy.'
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.nano
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
      - m4.xlarge
      - m5.xlarge
  InstanceCount:
    Description: 'The number of instances to deploy.'
    Type: Number
    Default: 1
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.2.0/24

  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: true
  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.4.0/24

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      VpcId: !Ref VPC
  GatewayAttachmentA:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      SubnetIds:
        - !Ref PublicSubnetA
        - !Ref PrivateSubnetA

  GatewayAttachmentB:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      SubnetIds:
        - !Ref PublicSubnetB
        - !Ref PrivateSubnetB
  RouteTablePublicA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Routes:
        -
          DestinationCidrBlock: 0.0.0.0/0
          GatewayId: !Ref InternetGateway

  RouteTablePrivateA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Routes:
        -
          DestinationCidrBlock: 0.0.0.0/0
          GatewayId: !Ref InternetGateway
  SubnetRouteTableAssociationPublicA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePublicA
      SubnetId: !Ref PublicSubnetA

  SubnetRouteTableAssociationPrivateA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePrivateA
      SubnetId: !Ref PrivateSubnetA
  SubnetRouteTableAssociationPublicB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePublicA
      SubnetId: !Ref PublicSubnetB

  SubnetRouteTableAssociationPrivateB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePrivateA
      SubnetId: !Ref PrivateSubnetB
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Allow SSH access.'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        -
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  InstanceA:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-064a7938f1d53e4c1
      InstanceType: !Ref InstanceType
      KeyName: 'aws-key'
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref PublicSubnetA
  InstanceB:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-064a7938f1d53e4c1
      InstanceType: !Ref InstanceType
      KeyName: 'aws-key'
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref PublicSubnetB
  InstanceC:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-064a7938f1d53e4c1
      InstanceType: !Ref InstanceType
      KeyName: 'aws-key'
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref PrivateSubnetA
  InstanceD:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-064a7938f1d53e4c1
      InstanceType: !Ref InstanceType
      KeyName: 'aws-key'
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref PrivateSubnetB
  DBSecurityGroup:
    Type: AWS::RDS::DBSecurityGroup
    Properties:
      GroupDescription: 'Allow access to the database.'
      VpcId: !Ref VPC

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      SubnetIds:
        - !Ref PublicSubnetA
        - !Ref PrivateSubnetA
      DBSubnetGroupName: 'db-subnet'
  Database:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 50
      Engine: postgres
      InstanceClass: db.t2.micro
      MasterUsername: 'aws-user'
      MasterUserPassword: '<PASSWORD>'
      DBName: 'aws-db'
      DBSubnetGroupName: !Ref DBSubnetGroup
  S3Bucket:
    Type: AWS::S3::Bucket
